# dqar-aidbox

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: aidbox-kb.md  cdar-aidbox-databricks-kit-docs-OPENMETADATA_INTEGRATION.md  cdar-aidbox-databricks-kit-docs-QUICKSTART.md  claude-code-03-step-0-rename-repo.md  dqar-aidbox-databricks-kit-docs-AIDBOX_SETUP.md  dqar-aidbox-databricks-kit-docs-ARCHITECTURE.md  dqar-aidbox-databricks-kit-docs-AUDITEVENT_PROVENANCE.md  dqar-aidbox-databricks-kit-docs-OPENLINEAGE_EMISSION.md  dqar-aidbox-databricks-kit-docs-OPENMETADATA_INTEGRATION.md  dqar-aidbox-databricks-kit-docs-QUICKSTART.md  dqar-aidbox-databricks-kit-docs-TROUBLESHOOTING.md  dqar-aidbox-databricks-kit-docs-UC_PROPERTIES_LOADING.md
init_bundle/: generate.py  init-bundle.json  materialize.py
shared/: lineage.py
specs/: 00-OVERVIEW.md  01-uc-properties-loading.md  02-openlineage-emission.md  03-audevent-provenance.md  04-integration-with-client-kit.md  05-integration-orchestration.md  ACCEPTANCE_CRITERIA.md  DEPENDENCIES.md  EXAMPLES.md  dqar-04-lineage-studies-methodology.md  dqar-05-source-inference-algorithm.md
stage3/: inference.py  load.py  pre_ingest.py
stage4/: cbp_measure.sql  semantic_assessment.py
stage5/: findings.py
tests/fixtures/: make_test_package.py
web/: app.py  presign.py
web/templates/: upload.html
