[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dqar-aidbox-databricks-kit"
version = "0.1.0"
requires-python = ">=3.11"
description = "DQAR Aidbox-side Databricks kit — ingest, semantic assessment, findings report"
dependencies = [
    "dqar-contracts>=1.0.0,<2.0.0",
    "requests",
    "boto3",
    "python-dotenv",
]

[project.optional-dependencies]
lineage = [
    "openlineage-python",
]
web = [
    "fastapi",
    "uvicorn[standard]",
    "boto3",
    "jinja2",
    "python-multipart",
]
report = [
    "anthropic",
    "jinja2",
    "weasyprint",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]
